# tools-examples

./: .gitignore  .gitmodules  README.md
CMake/include/: dllist.hpp
CMake/src/: main.cpp
README_template/: README.md
boost_test_example/: CMakeLists.txt
boost_test_example/src/: main.cpp
boost_test_example/test/: arith_test.cpp  reverse_test.cpp
cmake/: CMakeLists.txt
cmake+boost/include/static/: greet.h
cmake+googletest/dllist/src/: greet.cpp  main.cpp
cmake-template/: CMakeLists.txt
cmake-template/cmake/modules/: clang-format.cmake
cmake-template/include/static/: hello.h
cmake-template/subdir1/include/: subdir1.h
cmake-template/subdir1/src/: subdir1.cpp
cmake-template/subdir2/include/: subdir2.h
cmake-template/subdir3/include/: subdir3.hpp
cmake/include/shared/: hello.h
cmake/src/: hello_shared.cpp  hello_static.cpp  main.cpp
cmake/subdir1/: CMakeLists.txt
cmake/subdir1/src/: subdir1.cpp
cmake/subdir2/: CMakeLists.txt
cmake/subdir2/src/: subdir2.cpp
cmake/subdir3/: CMakeLists.txt
cmake_example/cmake/: analysis.cmake
cmake_example/include/static/: palidrome.h
cmake_example/src/: hello_shared.cpp  hello_static.cpp
cmake_example/subdir2/: CMakeLists.txt
cpp_doctest/: CMakeLists.txt
cpp_doctest/src/: tutorials.cpp
dllist/: CMakeLists.txt  run.sh
dllist/cmake/: Doxygen.cmake
dllist/cmake/scripts/: clang-format-check-changed.py
dllist/src/: main.cpp
example/: CMakeLists.txt
example/cmake/modules/: FindCppCheck.cmake  FindDoxygen.cmake
example/include/shared/: hello.h
example/include/static/: hello.h
example/src/: main.cpp
example/subdir1/: CMakeLists.txt
example/subdir1/src/: subdir1.cpp
example/subdir2/include/: subdir2.h
example/subdir2/src/: subdir2.cpp
example/subdir3/: CMakeLists.txt
example/subdir3/include/: subdir3.hpp
github_actions_example/.github/workflows/: run.yml
github_actions_example/include/: reverse.h
github_actions_example/src/: reverse.cpp
googletest_test_example/: CMakeLists.txt
googletest_test_example/src/: arith.cpp
googletest_test_example/test/: arith_test.cpp  reverse_test.cpp
template/: CMakeLists.txt  run.sh
template/cmake/modules/: clang-format.cmake
template/include/static/: reverse.h
template/src/: palidrome.cpp  reverse.cpp
template/subdir1/include/: subdir1.h
template/test/: boost_test.cpp  googletest_test.cpp
